--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
     <title>Baseball</title>
-    <link rel="stylesheet" href="../../utils/reset.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <main>
       <h1>Baseball</h1>
-      <section></section>
+      <section>
+        <div class="ball_answer">정답은?</div>
+        <form>
+          <label for="question"></label>
+          <input type="number" id="question" name="question" min=0 max=9999 class="ball_input" />
+          <button>도전</button>
+        </form>
+        <div class="ball_question">결과</div>
+      </section>
     </main>
     <script src="script.js"></script>
   </body>
